--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "react-sus",
-  "version": "0.0.1",
+  "version": "0.0.4-2",
   "description": "minimal suspense-based data-fetching",
+  "license": "MIT",
+  "author": "<mail@henrygressmann.de>",
   "type": "module",
-  "types": "lib/index.d.ts",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "./lib/"
+  ],
   "scripts": {
-    "publish": "np",
-    "dev": "node --loader=ts-node/esm --no-warnings src/index.ts",
     "build": "npm run build:esbuild && npm run types",
     "build:esbuild": "esbuild src/*.ts --minify --bundle --splitting --chunk-names=chunks/[name]-[hash] --outdir=lib --platform=node --external:react --target=node16 --format=esm",
+    "dev": "node --loader=ts-node/esm --no-warnings src/index.ts",
+    "release": "release-it",
+    "test": "tap --ts --node-arg=--no-warnings --node-arg=--loader=ts-node/esm",
     "types": "tsc -p tsconfig.build.json",
-    "test": "tap --ts --node-arg=--no-warnings --node-arg=--loader=ts-node/esm"
+    "preversion": "npm run build"
   },
-  "author": "<mail@henrygressmann.de>",
-  "license": "MIT",
   "devDependencies": {
     "@explodingcamera/eslint-config": "^21.0.0",
     "@types/node": "^17.0.14",
@@ -24,5 +28,16 @@
     "tap": "^15.1.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "release-it": "^14.12.4"
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release v${version}"
+    },
+    "github": {
+      "release": true
+    }
   }
 }
