--- a/package.json
+++ b/package.json
@@ -22,12 +22,22 @@
   "devDependencies": {
     "@explodingcamera/eslint-config": "^21.0.0",
     "@types/node": "^17.0.14",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/tap": "^15.0.5",
     "esbuild": "^0.14.16",
     "eslint": "^8.8.0",
+    "global-jsdom": "^8.4.0",
+    "jsdom": "^19.0.0",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0",
     "tap": "^15.1.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "peerDependencies": {
+    "react": "^18",
+    "react-dom": "^18"
   },
   "dependencies": {
     "release-it": "^14.12.4"
