--- a/package.json
+++ b/package.json
@@ -33,15 +33,13 @@
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
     "tap": "^15.1.6",
+    "release-it": "^14.12.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "react": "^18",
     "react-dom": "^18"
-  },
-  "dependencies": {
-    "release-it": "^14.12.4"
   },
   "release-it": {
     "git": {
