--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
+    "react": ">=18"
   },
   "release-it": {
     "git": {
