--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "npm run build:esbuild && npm run types",
-    "build:esbuild": "esbuild src/index.ts --minify --bundle --outdir=lib --platform=node --external:react --target=node16 --format=esm",
+    "build:esbuild": "esbuild src/index.ts --minify --bundle --outdir=lib --platform=node --external:react --target=esnext --format=esm",
     "dev": "node --loader=ts-node/esm --no-warnings src/index.ts",
     "release": "release-it",
     "test": "tap --ts --node-arg=--no-warnings --node-arg=--loader=ts-node/esm",
