--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "npm run build:esbuild && npm run types",
-    "build:esbuild": "esbuild src/index.ts --minify --bundle --outdir=lib --platform=node --external:react --target=esnext --format=esm",
+    "build:esbuild": "esbuild src/index.ts --bundle --outdir=lib --platform=node --external:react --target=esnext --format=esm",
     "dev": "node --loader=ts-node/esm --no-warnings src/index.ts",
     "release": "release-it",
     "test": "tap --ts --node-arg=--no-warnings --node-arg=--loader=ts-node/esm",
@@ -21,20 +21,20 @@
     "preversion": "npm run build"
   },
   "devDependencies": {
-    "@explodingcamera/eslint-config": "^21.0.0",
-    "@types/node": "^17.0.14",
-    "@types/react": "^17.0.38",
+    "@explodingcamera/eslint-config": "^21.0.1",
+    "@types/node": "^17.0.17",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/tap": "^15.0.5",
-    "esbuild": "^0.14.16",
-    "eslint": "^8.8.0",
+    "esbuild": "^0.14.21",
+    "eslint": "^8.9.0",
     "global-jsdom": "^8.4.0",
     "jsdom": "^19.0.0",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
-    "tap": "^15.1.6",
     "release-it": "^14.12.4",
-    "ts-node": "^10.4.0",
+    "tap": "^15.1.6",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
